Colaboratory を使用して作成しました

--- a/rust01.ipynb
+++ b/rust01.ipynb
@@ -6,7 +6,7 @@
       "name": "rust01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOYjgI/2jKNFSjnxQv6Mj9l",
+      "authorship_tag": "ABX9TyP7EOFVeKqE5ogQ4mQtYum9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -285,11 +285,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9s64k-2BhiFB",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "75d68028-f940-49d3-a9cc-4aed980ae132"
+        "id": "9s64k-2BhiFB"
       },
       "source": [
         "%%script false\n",
@@ -308,16 +304,8 @@
         "        path: std::path::PathBuf::from(path),\n",
         "}"
       ],
-      "execution_count": 32,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Overwriting main.rs\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -376,32 +364,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "AKAmaAgJJpGA",
-        "outputId": "049593f8-ae87-42a5-e431-cb83f114360c",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "%%writefile test.txt\n",
-        "foo: 10\n",
-        "bar: 20\n",
-        "baz: 30"
-      ],
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Writing test.txt\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "fLzLxnIQkRoL"
@@ -420,7 +382,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "253c0612-534b-424e-a46e-f8591629b86f"
+        "outputId": "c0fca7cd-6815-4d2e-9d1b-1193660d6f7f"
       },
       "source": [
         "%%writefile main.rs\n",
@@ -441,7 +403,7 @@
         "    println!(\"{} => {:?}\", args.pattern, args.path)\n",
         "}"
       ],
-      "execution_count": 38,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -509,42 +471,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "8cQuJM9m8u4T"
-      },
-      "source": [
-        "実験: やってみよう。"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "nIMV44ypDCbY",
-        "outputId": "970c8d35-c674-40b6-ad1c-59595160997c",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "!cargo build; cargo run -- bar test.txt"
-      ],
-      "execution_count": 39,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\u001b[0m\u001b[0m\u001b[1m\u001b[32m   Compiling\u001b[0m content v0.1.0 (/content)\n",
-            "\u001b[0m\u001b[0m\u001b[1m\u001b[32m    Finished\u001b[0m dev [unoptimized + debuginfo] target(s) in 0.96s\n",
-            "\u001b[0m\u001b[0m\u001b[1m\u001b[32m    Finished\u001b[0m dev [unoptimized + debuginfo] target(s) in 0.02s\n",
-            "\u001b[0m\u001b[0m\u001b[1m\u001b[32m     Running\u001b[0m `target/debug/content bar test.txt`\n",
-            "bar => \"test.txt\"\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "Hu0q87js-gtS"
       },
       "source": [
@@ -554,62 +480,21 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jc4q-SUs-orc",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b05f4cbb-18e5-4dfa-fed9-5aa60f1a06e5"
-      },
-      "source": [
-        "%%writefile main.rs\n",
-        "use structopt::StructOpt;\n",
-        "\n",
-        "/// Search for a pattern in a file and display the lines that contain it.\n",
-        "#[derive(StructOpt)]\n",
-        "struct Cli {\n",
-        "    /// The pattern to look for\n",
-        "    pattern: String,\n",
-        "    /// The path to the file to read\n",
-        "    #[structopt(parse(from_os_str))]\n",
-        "    path: std::path::PathBuf,\n",
-        "}\n",
-        "\n",
-        "fn main (){\n",
-        "    let args = Cli::from_args();\n",
-        "    println!(\"{} => {:?}\", args.pattern, args.path)\n",
-        "}"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Overwriting main.rs\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "qUBKP7b6-5k8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "98a7c307-8626-47bb-8e1d-7fe6a8d1a34e"
+        "outputId": "57ffc856-88d2-41a6-802c-436c2db829b6"
       },
       "source": [
-        "# 実験\n",
         "!cargo run -- some-pattern some-file"
       ],
-      "execution_count": null,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "\u001b[0m\u001b[0m\u001b[1m\u001b[32m   Compiling\u001b[0m content v0.1.0 (/content)\n",
-            "\u001b[0m\u001b[0m\u001b[1m\u001b[32m    Finished\u001b[0m dev [unoptimized + debuginfo] target(s) in 1.04s\n",
+            "\u001b[0m\u001b[0m\u001b[1m\u001b[32m    Finished\u001b[0m dev [unoptimized + debuginfo] target(s) in 0.02s\n",
             "\u001b[0m\u001b[0m\u001b[1m\u001b[32m     Running\u001b[0m `target/debug/content some-pattern some-file`\n",
             "some-pattern => \"some-file\"\n"
           ],
@@ -633,7 +518,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c7bea728-bb99-4e2c-abbe-569508fd2f1f"
+        "outputId": "a33d9d04-6c6b-488a-b94c-a8def5ecfe18"
       },
       "source": [
         "%%writefile main.rs\n",
@@ -660,7 +545,7 @@
         "    }\n",
         "}"
       ],
-      "execution_count": 40,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
@@ -678,18 +563,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3e87308d-8d4b-4f5a-e768-198563bf74f8"
+        "outputId": "9d2cd628-3536-49b0-cb6c-fdc1b42c1db7"
       },
       "source": [
         "!cargo run -- main main.rs"
       ],
-      "execution_count": 41,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "\u001b[0m\u001b[0m\u001b[1m\u001b[32m   Compiling\u001b[0m content v0.1.0 (/content)\n",
-            "\u001b[0m\u001b[0m\u001b[1m\u001b[32m    Finished\u001b[0m dev [unoptimized + debuginfo] target(s) in 1.03s\n",
+            "\u001b[0m\u001b[0m\u001b[1m\u001b[32m    Finished\u001b[0m dev [unoptimized + debuginfo] target(s) in 0.95s\n",
             "\u001b[0m\u001b[0m\u001b[1m\u001b[32m     Running\u001b[0m `target/debug/content main main.rs`\n",
             "fn main (){\n"
           ],
@@ -713,26 +598,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UfC_2OAmCRpR",
+        "id": "Sq2Fpo-bex3Y",
+        "outputId": "59ab3e36-5ae4-4b52-ce20-e8d45f1b6b21",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "8af13918-3565-431e-be07-68aeec2e6cd2"
+        }
       },
       "source": [
-        "# 実験\n",
-        "!cargo run -- path main.rs"
+        "# 実験 path が読めないときのエラー\n",
+        "! cargo run -- main foobar"
       ],
-      "execution_count": null,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "\u001b[0m\u001b[0m\u001b[1m\u001b[32m    Finished\u001b[0m dev [unoptimized + debuginfo] target(s) in 0.02s\n",
-            "\u001b[0m\u001b[0m\u001b[1m\u001b[32m     Running\u001b[0m `target/debug/content path main.rs`\n",
-            "    /// The path to the file to read\n",
-            "    path: std::path::PathBuf,\n",
-            "    let content = std::fs::read_to_string(&args.path).expect(\"could not read file\");\n"
+            "\u001b[0m\u001b[0m\u001b[1m\u001b[32m     Running\u001b[0m `target/debug/content main foobar`\n",
+            "thread 'main' panicked at 'could not read file: Os { code: 2, kind: NotFound, message: \"No such file or directory\" }', main.rs:15:19\n",
+            "note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace\n"
           ],
           "name": "stdout"
         }
@@ -741,17 +625,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "63Av9BqCBMsd"
+        "id": "M8Mt1c-aevla"
       },
       "source": [
-        "## 課題 ファイルを一度に全部読み込まない方法\n",
-        "\n",
-        "巨大なファイルだった場合、\n",
-        "```\n",
-        "let content = std::fs::read_to_string(&args.path).expect(\"could not read file\");\n",
-        "```\n",
-        "`read_to_string()`の代わりに`BufReader`を使う方法がある。\n",
-        "\n"
+        "# いまここ"
       ]
     },
     {
