--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMgJYBlMdpmrN9D2+GxsnX1",
+      "authorship_tag": "ABX9TyN+XVUaTHKggtvIie284vN3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3569,7 +3569,7 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3592,7 +3592,7 @@
       "source": [
         "!g++ array01.cpp -o array01; ./array01"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7369,10 +7369,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "wGId5NXL5RXr",
-        "outputId": "55597115-b29c-459f-e672-c25183617581",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "55597115-b29c-459f-e672-c25183617581"
       },
       "source": [
         "%%writefile arrayint01.cpp\n",
@@ -7391,7 +7391,7 @@
         "    std::cout << *(p + 5) << \"\\n\"; // 0\n",
         "}"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7406,15 +7406,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "JSaRG4vV5kWr",
-        "outputId": "e9a12e59-0d25-4add-9eae-635f4a5043e4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e9a12e59-0d25-4add-9eae-635f4a5043e4"
       },
       "source": [
         "!g++ arrayint01.cpp -o arrayint01; ./arrayint01"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7431,13 +7431,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iPYHaKYjwBky"
+      },
+      "source": [
+        "次の例で、PrintArray1とPrintArray2は完全に同一。一見すると、PrintArray1 は配列の個数も渡しているように見えるが、実質はポインターを渡しているだけ。"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "3ztmFecm7Bzr",
-        "outputId": "5a03bcf2-f89b-4670-cc9c-719b35356b76",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5a03bcf2-f89b-4670-cc9c-719b35356b76"
       },
       "source": [
         "%%writefile arrayint02.cpp\n",
@@ -7466,7 +7475,7 @@
         "    return 0;\n",
         "}"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7481,15 +7490,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "4G96oNEY7GNf",
-        "outputId": "42587a9e-9ac9-4a20-8080-0a0c7e6b702b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "42587a9e-9ac9-4a20-8080-0a0c7e6b702b"
       },
       "source": [
         "!g++ arrayint02.cpp -o arrayint02; ./arrayint02"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7511,6 +7520,398 @@
             "2\n",
             "3\n",
             "4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3daVg_uZwdvE"
+      },
+      "source": [
+        "従って、正しくは次のように要素数を渡す必要がある。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T8c8-6a9wmx9",
+        "outputId": "d6d97b7f-041e-47b3-b9a1-378351bc005c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile arrayint03.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "\n",
+        "void PrintArray(const int* x, std::size_t num) {\n",
+        "    for (std::size_t i = 0; i < num; ++i) {\n",
+        "        std::cout << x[i] << std::endl;\n",
+        "    }\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "    constexpr std::size_t num = 5;\n",
+        "    int x[num] = {0, 1, 2, 3, 4};\n",
+        "\n",
+        "    PrintArray(x, num);\n",
+        "\n",
+        "    return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing arrayint03.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a9yiiZGRwmm7",
+        "outputId": "b91df54b-8cbd-4588-aa83-f9473ffc094a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ arrayint03.cpp -o arrayint03; ./arrayint03"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RzhHagqtxnAQ",
+        "outputId": "481d10c5-e955-4763-c269-4b7fbc81b0a1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 実験 C++17のstd:sizeを使ってみる\n",
+        "%%writefile arrayint04.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "\n",
+        "void PrintArray(int* x, int num) {\n",
+        "    for (int i = 0; i < num; ++i) {\n",
+        "        std::cout << x[i] << std::endl;\n",
+        "    }\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "    int x[5] = {0, 1, 2, 3, 4};\n",
+        "\n",
+        "    PrintArray(x, std::size(x));\n",
+        "\n",
+        "    return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting arrayint04.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q-amuNJVxnbj",
+        "outputId": "8a9558f3-b8e7-4410-8904-ed4d7eb8cd70",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ -std=gnu++17 arrayint04.cpp -o arrayint04; ./arrayint04"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9Us2ZKnW0YAM"
+      },
+      "source": [
+        "# C++11では次のようにするとか\n",
+        "%%script false\n",
+        "\n",
+        "#include <cstddef>\n",
+        "template <class T, std::size_t N>\n",
+        "constexpr std::size_t size(const T (&)[N]) noexcept { return N; }"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VMLwYQ0k04O2"
+      },
+      "source": [
+        "やってみる"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "otgfcxgx07tJ",
+        "outputId": "a50f1e98-1ab8-46d1-d720-3812e2b7d804",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 実験\n",
+        "%%writefile arrayint05.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "#include <cstddef>\n",
+        "template <class T, std::size_t N>\n",
+        "constexpr std::size_t size(const T (&)[N]) noexcept { return N; }\n",
+        "\n",
+        "void PrintArray(int* x, int num) {\n",
+        "    for (int i = 0; i < num; ++i) {\n",
+        "        std::cout << x[i] << std::endl;\n",
+        "    }\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "    int x[5] = {0, 1, 2, 3, 4};\n",
+        "\n",
+        "    PrintArray(x, size(x));\n",
+        "\n",
+        "    return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing arrayint05.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "klqMCPUs07g6",
+        "outputId": "064b7ffc-3601-4edc-f5d0-69ebfe2f52c1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ arrayint05.cpp -o arrayint05; ./arrayint05"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BQRoEOVrxEJr"
+      },
+      "source": [
+        "テンプレートの文法についてはとりあえずわからないので、別途学ぶ。 かも。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xEAHzwaA2s7q"
+      },
+      "source": [
+        "std::arrayで配列を作るとx.size()で要素数が取得できるとか。 こっちの方が便利ではないか。\n",
+        "\n",
+        "やってみよう。 #include <array> する必要がある。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oCq-Cjgs3PGq",
+        "outputId": "4c18c6c1-9908-45c4-9f9b-b77f43564b4c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 実験\n",
+        "%%writefile arrayint06.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "#include <array>\n",
+        "\n",
+        "void PrintArray(std::array x, std::size_t num) {\n",
+        "    for (std::size_t i = 0; i < num; ++i) {\n",
+        "        std::cout << x[i] << std::endl;\n",
+        "    }\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "    std::array<int, 5> x = {0, 1, 2, 3, 4};\n",
+        "    auto size = x.size();\n",
+        "\n",
+        "    PrintArray(x, size);\n",
+        "\n",
+        "    return 0;\n",
+        "}\n",
+        "\n",
+        "\n"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting arrayint06.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Yvshq3DR3O_G"
+      },
+      "source": [
+        "!g++ arrayint06.cpp -o arrayint06; ./arrayint06"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "n4yCpAiz59sC"
+      },
+      "source": [
+        "うまくいかないので実験\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0RQz7vJo5__7",
+        "outputId": "80ae5abe-be0e-4906-d037-a976074d25cf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 実験 cpprefjp.github.io にある例\n",
+        "\n",
+        "%%writefile arrayint07.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "#include <array>\n",
+        "#include <algorithm>\n",
+        "\n",
+        "int main()\n",
+        "{\n",
+        "  // 3要素のint型配列を定義し、初期化子リストで初期化\n",
+        "  std::array<int, 3> ar = {3, 1, 4};\n",
+        "\n",
+        "  // size()メンバ関数による要素数取得\n",
+        "  for (std::size_t i = 0; i < ar.size(); ++i) {\n",
+        "    ++ar[i]; // operator[]で任意の要素にランダムアクセス\n",
+        "  }\n",
+        "\n",
+        "  // イテレータによる要素の横断\n",
+        "  std::for_each(ar.begin(), ar.end(), [](int x) {\n",
+        "    std::cout << x << std::endl;\n",
+        "  });\n",
+        "}"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting arrayint07.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0qRpGxmz6AhE",
+        "outputId": "16a6f220-d9cf-4354-99ea-28da865c6cc8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ arrayint07.cpp -o arrayint07; ./arrayint07"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4\n",
+            "2\n",
+            "5\n"
           ],
           "name": "stdout"
         }
