Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN+XVUaTHKggtvIie284vN3",
+      "authorship_tag": "ABX9TyOMJyr/OJwmrkHQUPZny7Xl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7538,10 +7538,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "T8c8-6a9wmx9",
-        "outputId": "d6d97b7f-041e-47b3-b9a1-378351bc005c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d6d97b7f-041e-47b3-b9a1-378351bc005c"
       },
       "source": [
         "%%writefile arrayint03.cpp\n",
@@ -7563,7 +7563,7 @@
         "    return 0;\n",
         "}\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7578,15 +7578,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "a9yiiZGRwmm7",
-        "outputId": "b91df54b-8cbd-4588-aa83-f9473ffc094a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b91df54b-8cbd-4588-aa83-f9473ffc094a"
       },
       "source": [
         "!g++ arrayint03.cpp -o arrayint03; ./arrayint03"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7605,10 +7605,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "RzhHagqtxnAQ",
-        "outputId": "481d10c5-e955-4763-c269-4b7fbc81b0a1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "481d10c5-e955-4763-c269-4b7fbc81b0a1"
       },
       "source": [
         "# 実験 C++17のstd:sizeを使ってみる\n",
@@ -7630,7 +7630,7 @@
         "    return 0;\n",
         "}\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7645,15 +7645,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "q-amuNJVxnbj",
-        "outputId": "8a9558f3-b8e7-4410-8904-ed4d7eb8cd70",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8a9558f3-b8e7-4410-8904-ed4d7eb8cd70"
       },
       "source": [
         "!g++ -std=gnu++17 arrayint04.cpp -o arrayint04; ./arrayint04"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7697,10 +7697,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "otgfcxgx07tJ",
-        "outputId": "a50f1e98-1ab8-46d1-d720-3812e2b7d804",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a50f1e98-1ab8-46d1-d720-3812e2b7d804"
       },
       "source": [
         "# 実験\n",
@@ -7725,7 +7725,7 @@
         "    return 0;\n",
         "}\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7740,15 +7740,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "klqMCPUs07g6",
-        "outputId": "064b7ffc-3601-4edc-f5d0-69ebfe2f52c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "064b7ffc-3601-4edc-f5d0-69ebfe2f52c1"
       },
       "source": [
         "!g++ arrayint05.cpp -o arrayint05; ./arrayint05"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7787,10 +7787,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "oCq-Cjgs3PGq",
-        "outputId": "4c18c6c1-9908-45c4-9f9b-b77f43564b4c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5b7aeed1-22d7-4629-ddff-282194b21138"
       },
       "source": [
         "# 実験\n",
@@ -7799,7 +7799,7 @@
         "#include <iostream>\n",
         "#include <array>\n",
         "\n",
-        "void PrintArray(std::array x, std::size_t num) {\n",
+        "void PrintArray(std::array<int,5> x, std::size_t num) {\n",
         "    for (std::size_t i = 0; i < num; ++i) {\n",
         "        std::cout << x[i] << std::endl;\n",
         "    }\n",
@@ -7807,16 +7807,15 @@
         "\n",
         "int main() {\n",
         "    std::array<int, 5> x = {0, 1, 2, 3, 4};\n",
-        "    auto size = x.size();\n",
         "\n",
-        "    PrintArray(x, size);\n",
+        "    PrintArray(x, x.size());\n",
         "\n",
         "    return 0;\n",
         "}\n",
         "\n",
         "\n"
       ],
-      "execution_count": 26,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -7830,31 +7829,38 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Yvshq3DR3O_G"
+        "id": "Yvshq3DR3O_G",
+        "outputId": "4843b56e-2ebe-40b2-bf51-b17c41471499",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ arrayint06.cpp -o arrayint06; ./arrayint06"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "n4yCpAiz59sC"
-      },
-      "source": [
-        "うまくいかないので実験\n"
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "0RQz7vJo5__7",
-        "outputId": "80ae5abe-be0e-4906-d037-a976074d25cf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "80ae5abe-be0e-4906-d037-a976074d25cf"
       },
       "source": [
         "# 実験 cpprefjp.github.io にある例\n",
@@ -7881,7 +7887,7 @@
         "  });\n",
         "}"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7896,15 +7902,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "0qRpGxmz6AhE",
-        "outputId": "16a6f220-d9cf-4354-99ea-28da865c6cc8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "16a6f220-d9cf-4354-99ea-28da865c6cc8"
       },
       "source": [
         "!g++ arrayint07.cpp -o arrayint07; ./arrayint07"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
