Colaboratory を使用して作成しました

--- a/learnjs.ipynb
+++ b/learnjs.ipynb
@@ -6,7 +6,7 @@
       "name": "learnjs.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPTuLnljmpU8WHtfY1zynzw",
+      "authorship_tag": "ABX9TyNTrKd1qIMqgyydSiDRtUOt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,11 +28,13 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "cG6xXZZ1h0LB",
-        "colab_type": "text"
+        "id": "cG6xXZZ1h0LB"
       },
       "source": [
         "# はじめに、というか\n",
+        "\n",
+        "参考テキスト \n",
+        "https://developer.mozilla.org/ja/docs/Learn/JavaScript/First_steps/What_is_JavaScript\n",
         "\n",
         "`Colab` で `%%javascript` マジック・コマンドを使って、`JavaScript` の勉強をしようと思い立ったのだが、ふつーのテキストにある `alert()` とか `prompt()` とかが使えない。`console.log()` は使えるが、それだといちいち `デベロッパーツール` を開かないといけないよね。\n",
         "\n",
@@ -45,30 +47,29 @@
       "cell_type": "code",
       "metadata": {
         "id": "xRuGEUiZjcj4",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 85
+          "height": 84
         },
-        "outputId": "7c7f85b8-d9de-415d-d3a3-2b8b087e1405"
+        "outputId": "262e1827-4a78-4bd9-bb7e-c1d48fc787cf"
       },
       "source": [
         "%%javascript\n",
         "\n",
-        "document.body.style = \"white-space: pre;\";\n",
+        "document.body.style = \"white-space: pre;\"; // このおまじないで\\nが使えるようになる。\n",
         "\n",
         "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"二行書いたら\\nどうなるか\"));\n",
         "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"\\n\"));\n",
         "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"二行目\"));"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "application/javascript": [
               "\n",
-              "document.body.style = \"white-space: pre;\";\n",
+              "document.body.style = \"white-space: pre;\"; // このおまじないで\\nが使えるようになる。\n",
               "\n",
               "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"二行書いたら\\nどうなるか\"));\n",
               "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"\\n\"));\n",
@@ -87,8 +88,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "QKc4eZ57kb5u",
-        "colab_type": "text"
+        "id": "QKc4eZ57kb5u"
       },
       "source": [
         "これで改行マークが使えるし、行替えもめんどうだけど、できる。\n",
@@ -99,8 +99,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "oIYj_aOhqlA5",
-        "colab_type": "text"
+        "id": "oIYj_aOhqlA5"
       },
       "source": [
         "# JavaScript はじめの一歩\n",
@@ -116,7 +115,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "Se7x_0xu6cuR",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -168,8 +166,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "YtCE3SsQ7Ubo",
-        "colab_type": "text"
+        "id": "YtCE3SsQ7Ubo"
       },
       "source": [
         "使えた。Python や Ruby の `#` ではなくて、C++ や Java の `//` なのだ。覚えよう。\n"
@@ -178,8 +175,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "bidrpOZ48BaV",
-        "colab_type": "text"
+        "id": "bidrpOZ48BaV"
       },
       "source": [
         "# 数あてゲーム\n",
@@ -191,7 +187,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "2b0J8k5m9HWF",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -233,8 +228,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "34qJlNCSP4na",
-        "colab_type": "text"
+        "id": "34qJlNCSP4na"
       },
       "source": [
         "`Math.random()` は普通に使えた。\n",
@@ -247,8 +241,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9Uy5HzVoSCoG",
-        "colab_type": "text"
+        "id": "9Uy5HzVoSCoG"
       },
       "source": [
         "# 四則演算\n",
@@ -264,7 +257,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "g34dIsYgRVAb",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 170
@@ -332,8 +324,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6fRc3i3Hq2zo",
-        "colab_type": "text"
+        "id": "6fRc3i3Hq2zo"
       },
       "source": [
         "なにもわからないけど関数をつくってみよう。"
@@ -343,7 +334,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "syXRslzRrIqT",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -385,8 +375,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "v1G5viwVra3B",
-        "colab_type": "text"
+        "id": "v1G5viwVra3B"
       },
       "source": [
         "とりあえず `function funcname () {}` で関数が作れるらしい。`return` で返り値を指定できる。"
@@ -395,7 +384,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab_type": "code",
         "id": "TV6kQEpTr1dc",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -448,8 +436,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "eaV-V8CEs_Ye",
-        "colab_type": "text"
+        "id": "eaV-V8CEs_Ye"
       },
       "source": [
         "引数を指定できる。`if () {} else {}` もだいたい予想どおり。"
@@ -458,8 +445,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "xi5y8ZoHtVID",
-        "colab_type": "text"
+        "id": "xi5y8ZoHtVID"
       },
       "source": [
         "文字列の結合に `+` が使える。文字列の繰り返しに `*` は使えない。\n"
@@ -469,7 +455,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "CIwS8zGNtqme",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
@@ -515,8 +500,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "NHZJIdEUuRQk",
-        "colab_type": "text"
+        "id": "NHZJIdEUuRQk"
       },
       "source": [
         "同等かどうか調べるのに比較演算子が2種類ある、`==` と `===` 。\n",
@@ -527,8 +511,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "rR5jvtDhvV6e",
-        "colab_type": "text"
+        "id": "rR5jvtDhvV6e"
       },
       "source": [
         "オブジェクトについて。実験。"
@@ -538,7 +521,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "8xkt7_6Evanq",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -586,8 +568,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "qXacWFruwxir",
-        "colab_type": "text"
+        "id": "qXacWFruwxir"
       },
       "source": [
         "`style` プロパティを変えて出力を変えるのはできるか? 実験。\n",
@@ -598,8 +579,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5Ts6rFfgCIEV",
-        "colab_type": "text"
+        "id": "5Ts6rFfgCIEV"
       },
       "source": [
         "# 変数\n",
@@ -617,7 +597,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "tjEiQeTvC0Zd",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 69
@@ -675,8 +654,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "U36GT157D0HL",
-        "colab_type": "text"
+        "id": "U36GT157D0HL"
       },
       "source": [
         "デベロッパーツールのコンソールに `scoobyDo iｓ undefined` と出ている。同じ庵でファインドでみ意味が違うね。"
@@ -686,7 +664,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "cqmFjvVRDztY",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 69
@@ -744,8 +721,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "MHK1dlhuLETy",
-        "colab_type": "text"
+        "id": "MHK1dlhuLETy"
       },
       "source": [
         "定数の宣言には `const` を使う。`const` で宣言された定数は変更できない。"
@@ -754,8 +730,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "l6QNDuM2Hf7f",
-        "colab_type": "text"
+        "id": "l6QNDuM2Hf7f"
       },
       "source": [
         "# 配列\n",
@@ -766,7 +741,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "Q-MXCqgvHntd",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 69
@@ -828,8 +802,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "zCwlu-aTIGJ_",
-        "colab_type": "text"
+        "id": "zCwlu-aTIGJ_"
       },
       "source": [
         "混在できたし、変数は型を気にしていないみたい。\n",
@@ -840,8 +813,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "qaGaLLw7IXG6",
-        "colab_type": "text"
+        "id": "qaGaLLw7IXG6"
       },
       "source": [
         "# オブジェクト\n",
@@ -857,7 +829,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "KDf1K4zbO-jc",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 86
@@ -921,8 +892,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "UKANZ_CyP5YG",
-        "colab_type": "text"
+        "id": "UKANZ_CyP5YG"
       },
       "source": [
         "数字は `number` でしかなくて、配列も連想配列も `object` だ!!!\n",
@@ -933,8 +903,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Uq7GAzDgQY2Y",
-        "colab_type": "text"
+        "id": "Uq7GAzDgQY2Y"
       },
       "source": [
         "# みんな数学が大好き\n"
@@ -943,8 +912,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "uwK9lmu8dKv_",
-        "colab_type": "text"
+        "id": "uwK9lmu8dKv_"
       },
       "source": [
         "# インクリメント・デクリメント"
@@ -954,7 +922,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "CmToiAJndLiS",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
@@ -1018,8 +985,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "poUWlVLIfxNt",
-        "colab_type": "text"
+        "id": "poUWlVLIfxNt"
       },
       "source": [
         "# 文字列、数値変換\n",
@@ -1033,8 +999,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "EjXkO3rp8Bm2",
-        "colab_type": "text"
+        "id": "EjXkO3rp8Bm2"
       },
       "source": [
         "### 文字列の長さを調べる\n",
@@ -1054,7 +1019,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "WYvEdXXt-91N",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -1115,8 +1079,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "1Oer_s5F_5Ml",
-        "colab_type": "text"
+        "id": "1Oer_s5F_5Ml"
       },
       "source": [
         "Python では数値はゼロ以外はTrue、文字列は `\"\"` 以外はTrue、`()`、`[]`、`{}`、以外がTrue。あと `None` はFalse。\n",
@@ -1137,8 +1100,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "muLsfUNbGRg4",
-        "colab_type": "text"
+        "id": "muLsfUNbGRg4"
       },
       "source": [
         "### 問題 クリスマスカード"
@@ -1148,7 +1110,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "eGIBg74tGV31",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -1214,8 +1175,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7eddOXZTKqs5",
-        "colab_type": "text"
+        "id": "7eddOXZTKqs5"
       },
       "source": [
         "問題もなんだけど、`document.createElement('li');` がおもしろい。これを使っていままで `document.body.style = \"white-space: pre;\";` でやっていたことが変えられるのではないか。"
@@ -1225,7 +1185,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "cUvQVSDsKqIc",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -1281,8 +1240,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ZxIPCOMlXIh_",
-        "colab_type": "text"
+        "id": "ZxIPCOMlXIh_"
       },
       "source": [
         "うん。いい感じなので、これにしよう。ぜんぶ書き換えか? "
@@ -1292,7 +1250,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "BVwCzuMlXYd8",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -1370,8 +1327,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "M-1hGOHxX0y3",
-        "colab_type": "text"
+        "id": "M-1hGOHxX0y3"
       },
       "source": [
         "オッケーですね。"
@@ -1380,8 +1336,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "nNYTWEwQYDAr",
-        "colab_type": "text"
+        "id": "nNYTWEwQYDAr"
       },
       "source": [
         "### 問題 都市名\n",
@@ -1393,7 +1348,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "tJI4HijtYLpt",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
@@ -1471,8 +1425,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GcHmsXOlazeE",
-        "colab_type": "text"
+        "id": "GcHmsXOlazeE"
       },
       "source": [
         "### 問題 駅コードの抽出\n",
@@ -1484,7 +1437,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "gdxQvSeDa_YZ",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
@@ -1570,8 +1522,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7jWwVKIdLUAe",
-        "colab_type": "text"
+        "id": "7jWwVKIdLUAe"
       },
       "source": [
         "### 問題 変数"
@@ -1581,7 +1532,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "kvyGSxM1LEmh",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 69
@@ -1637,8 +1587,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "pGkX7qcWNcg8",
-        "colab_type": "text"
+        "id": "pGkX7qcWNcg8"
       },
       "source": [
         "やはり `print()` を使った方がいいね!!!!"
@@ -1648,7 +1597,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "6o7_t30NNcB8",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -1710,8 +1658,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "3WTA5soaN_qy",
-        "colab_type": "text"
+        "id": "3WTA5soaN_qy"
       },
       "source": [
         "### 問題 定数\n"
@@ -1721,7 +1668,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "lA8RJGziOCjs",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -1790,8 +1736,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "A-EgnA0EZSIu",
-        "colab_type": "text"
+        "id": "A-EgnA0EZSIu"
       },
       "source": [
         "### 問題 算数 1"
@@ -1801,7 +1746,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "ieBRgfwnZVdl",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -1907,8 +1851,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "bR3sm6y2bt3h",
-        "colab_type": "text"
+        "id": "bR3sm6y2bt3h"
       },
       "source": [
         "### 問題 算数 2"
@@ -1918,7 +1861,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "U2qDo_E_bwRz",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
@@ -2022,8 +1964,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "hp950eaXgA6h",
-        "colab_type": "text"
+        "id": "hp950eaXgA6h"
       },
       "source": [
         "### 問題 算数 3"
@@ -2033,7 +1974,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "LGj7B4IrgETU",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
@@ -2171,8 +2111,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "sx_FSpdLnf0C",
-        "colab_type": "text"
+        "id": "sx_FSpdLnf0C"
       },
       "source": [
         "# 配列 array\n",
@@ -2184,7 +2123,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "IAjhH9F2nykZ",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -2274,8 +2212,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "B8uTXQzHs6U1",
-        "colab_type": "text"
+        "id": "B8uTXQzHs6U1"
       },
       "source": [
         "### 配列と文字列 "
@@ -2285,7 +2222,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "YBRFbk-ls91A",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 255
@@ -2391,8 +2327,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "4f-XFOEHeEIB",
-        "colab_type": "text"
+        "id": "4f-XFOEHeEIB"
       },
       "source": [
         "### 問題 商品の印字\n"
@@ -2402,7 +2337,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "TFXU-5tAf4EA",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
@@ -2504,8 +2438,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "YqzuSt6W1zJs",
-        "colab_type": "text"
+        "id": "YqzuSt6W1zJs"
       },
       "source": [
         "### 問題 上位5件の検索"
@@ -2515,7 +2448,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "aYw7J7P114TA",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
@@ -2642,7 +2574,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "qG8YOjcLuMTc",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
@@ -2668,7 +2599,7 @@
         "# <script \n",
         "# </body>"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2704,8 +2635,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "mHWP31WGtmTc",
-        "colab_type": "text"
+        "id": "mHWP31WGtmTc"
       },
       "source": [
         "\n",
