Colaboratory を使用して作成しました

--- a/svg01.ipynb
+++ b/svg01.ipynb
@@ -6,7 +6,7 @@
       "name": "svg01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNgDDhMJQfkgIicJHKv2/Vl",
+      "authorship_tag": "ABX9TyOODUTrKuIw4TMY1jTnvWHJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -103,25 +103,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_sXL2TfRAtwN",
-        "outputId": "5698411d-7f39-45b5-ba6b-08345c0559cc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        }
+        },
+        "id": "_sXL2TfRAtwN",
+        "outputId": "022ab1a9-4460-4e89-a7f7-cdab54a8bf08"
       },
       "source": [
-        "# 実験\n",
+        "# 実験 circle だけで描く顔\n",
         "%%html\n",
         "\n",
         "<svg width=\"100\" height=\"100\" >\n",
-        "  <circle cx=\"50\" cy=\"50\" r=\"40\" stroke=\"lightsalmon\" stroke-width=\"4\" fill=\"lightsalmon\" />\n",
+        "  <circle cx=\"50\" cy=\"50\" r=\"40\" stroke=\"grey\"\" stroke-width=\"4\" fill=\"lightsalmon\" />\n",
         "  <circle cx=\"30\" cy=\"45\" r=\"10\" stroke=\"white\" stroke-width=\"4\" fill=\"black\" />\n",
         "  <circle cx=\"70\" cy=\"45\" r=\"10\" stroke=\"white\" stroke-width=\"4\" fill=\"black\" />\n",
         "  <circle cx=\"50\" cy=\"70\" r=\"10\" stroke=\"white\" stroke-width=\"1\" fill=\"red\" />\n",
         "</svg>"
       ],
-      "execution_count": 20,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "display_data",
@@ -129,11 +129,44 @@
             "text/html": [
               "\n",
               "<svg width=\"100\" height=\"100\" >\n",
-              "  <circle cx=\"50\" cy=\"50\" r=\"40\" stroke=\"lightsalmon\" stroke-width=\"4\" fill=\"lightsalmon\" />\n",
+              "  <circle cx=\"50\" cy=\"50\" r=\"40\" stroke=\"grey\"\" stroke-width=\"4\" fill=\"lightsalmon\" />\n",
               "  <circle cx=\"30\" cy=\"45\" r=\"10\" stroke=\"white\" stroke-width=\"4\" fill=\"black\" />\n",
               "  <circle cx=\"70\" cy=\"45\" r=\"10\" stroke=\"white\" stroke-width=\"4\" fill=\"black\" />\n",
               "  <circle cx=\"50\" cy=\"70\" r=\"10\" stroke=\"white\" stroke-width=\"1\" fill=\"red\" />\n",
               "</svg>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Z7fRb7GBDGNx",
+        "outputId": "ef073841-5b44-4cda-f6cc-f2b010528a55",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        }
+      },
+      "source": [
+        "# 実験 改行なしだと一見コンパクトに書ける\n",
+        "%%html\n",
+        "<svg width=\"100\" height=\"100\" ><circle cx=\"50\" cy=\"50\" r=\"40\" stroke=\"blue\" stroke-width=\"4\" fill=\"lightsalmon\" /><circle cx=\"30\" cy=\"45\" r=\"10\" stroke=\"white\" stroke-width=\"4\" fill=\"black\" /><circle cx=\"70\" cy=\"45\" r=\"10\" stroke=\"white\" stroke-width=\"4\" fill=\"black\" /><circle cx=\"50\" cy=\"70\" r=\"10\" stroke=\"white\" stroke-width=\"1\" fill=\"red\" /></svg>"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<svg width=\"100\" height=\"100\" ><circle cx=\"50\" cy=\"50\" r=\"40\" stroke=\"blue\" stroke-width=\"4\" fill=\"lightsalmon\" /><circle cx=\"30\" cy=\"45\" r=\"10\" stroke=\"white\" stroke-width=\"4\" fill=\"black\" /><circle cx=\"70\" cy=\"45\" r=\"10\" stroke=\"white\" stroke-width=\"4\" fill=\"black\" /><circle cx=\"50\" cy=\"70\" r=\"10\" stroke=\"white\" stroke-width=\"1\" fill=\"red\" /></svg>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
